Adopt to JDK22 (#18)
* Compliant to JDK22 EA b24

* Remove pinning feature

It has been officially supported since JDK-8254693.

* Use Linker::canonicalLayouts to get a layout for size_t

* Use Alerts extension in README.md

* Remove String Template

* Fix unchecked warning in JniEnv.java

* Update JDK version in GHA

* Clarify int cast

* Clarify int cast in VirtualFree()